--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.22.0",
     "@vueuse/motion": "^2.0.0-beta.12",
+    "firebase": "^9.22.0",
     "pinia": "^2.0.36",
     "vant": "^4.3.2",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vuetify": "^3.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
