--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@supabase/supabase-js": "^2.22.0",
     "@vueuse/motion": "^2.0.0-beta.12",
     "firebase": "^9.22.0",
+    "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.0.36",
     "vant": "^4.3.2",
     "vue": "^3.3.2",
